apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkding-data-claim
      containers:
      - name: app
        image: sissbruecker/linkding:latest@sha256:e35cb50e0581178f245125ffaa909c565416c94c9f22ace305a7d234a4345522
        volumeMounts:
        - name: data
          mountPath: /etc/linkding/data
        ports:
        - containerPort: 9090
